Styles update: Se agrega el loader y se envia atrás la nieve

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div></div>
 				<div></div>
 			</div>
-			<section class="container-content">
+			<section class="container-content" id="homePage">
 				<header class="header-flex-column">
 					<h1 id="welcomeMessage">Bienvenido {{ Usuario }}</h1>
 					<h3>He seleccionado regalos que me podrías dar en esta navidad, son sorpresa, así que ve dando click para revelarlos</h3>
