--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Christmas Gifts</title>
+		<link rel="icon" href="./img/favicon.ico" />
 		<link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Chewy&family=Poppins:wght@400;600;900&display=swap" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Chewy&family=Parkinsans:wght@300..800&family=Poppins&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=featured_seasonal_and_gifts" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
 		<link rel="stylesheet" href="./css/snow.css" />
 	</head>
@@ -94,13 +98,13 @@
 				<div></div>
 				<div></div>
 			</div>
-			<section class="container-content" id="homePage">
+			<section class="container-content">
 				<header class="header-flex-column">
 					<h1 id="welcomeMessage">Bienvenido {{ Usuario }}</h1>
 					<h3>He seleccionado regalos que me podrías dar en esta navidad, son sorpresa, así que ve dando click para revelarlos</h3>
 				</header>
 
-				<section class="gifts-container">
+				<section class="gifts-container" id="giftsContainer">
 					<a href="#view=1">
 						<span class="material-symbols-outlined gift-icon"> featured_seasonal_and_gifts </span>
 					</a>
@@ -117,6 +121,53 @@
 				</section>
 			</section>
 		</main>
+
+		<main id="viewPage" class="flex-column d-none">
+			<header class="nav-tab" id="navbarContainer">
+				<a href="#view=0" class="nav-item">
+					<i class="bi bi-arrow-left-circle"></i>
+				</a>
+
+				<a href="#home" class="nav-item">
+					<i class="bi bi-house"></i>
+				</a>
+
+				<a href="#view=0" class="nav-item link-disabled">
+					<i class="bi bi-arrow-right-circle"></i>
+				</a>
+			</header>
+
+			<section class="flex-rows">
+				<article class="photo-container">
+					<img id="photoGift" src="https://img.hollisterco.com/is/image/anf/KIC_322-4176-00210-200_model1.jpg" alt="Sudadera" />
+				</article>
+				<article>
+					<p id="priceGift">$200</p>
+					<h2 id="nameGift">Sudadera</h2>
+					<p id="descriptionGift">Descripción de la sudadera</p>
+					<a href="#" target="_blank" id="linkGift">Comprar</a>
+
+					<section id="otherPlace">
+						<h3>¿Dónde más puedo encontrarlo?</h3>
+						<p>No te preocupes, aquí te doy una lista</p>
+						<ul>
+							<li>Plaza Satélite</li>
+							<li>Perisur</li>
+							<li>Antara</li>
+						</ul>
+					</section>
+
+					<p class="notice-label"><strong>Nota:</strong> Los precios que te muestro son los precios que tenían cuando los seleccioné, pueden variar.</p>
+				</article>
+			</section>
+		</main>
+
+		<footer>
+			<audio controls>
+				<source src="./utils/santa_claus_coming.mp3" type="audio/mpeg" />
+				Your browser does not support the audio element.
+			</audio>
+		</footer>
 
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/letteranimation.min.js"></script>
 		<script src="./js/nodes.js"></script>
