UI: Se agrega metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Christmas Gifts</title>
+		<title>Santa Claus is Coming to Town</title>
 		<link rel="icon" href="./img/favicon.ico" />
 		<link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,6 +16,15 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
 		<link rel="stylesheet" href="./css/snow.css" />
+
+		<!-- Open Graph Meta Tags -->
+		<meta property="og:title" content="Mis regalos de Navidad" />
+		<meta property="og:description" content="Ustedes lo pidieron y aquí lo tienen, es una lista de los regalos que me gustaría para Navidad." />
+		<meta property="og:image" content="https://raw.githubusercontent.com/luistorres-code/xmas-fifts/refs/heads/master/img/image.png" />
+		<meta property="og:url" content="https://luistorres-code.github.io/xmas-fifts/" />
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Santa Claus viene a la ciudad" />
+		<meta property="og:locale" content="es_MX" />
 	</head>
 	<body>
 		<main id="welcomeMain" class="tracking-in-expand flex-column-all-h d-none">
