--- a/index.html
+++ b/index.html
@@ -27,6 +27,56 @@
 		<meta property="og:locale" content="es_MX" />
 	</head>
 	<body>
+		<div class="tpl-snow">
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
 		<main id="welcomeMain" class="tracking-in-expand flex-column-all-h d-none">
 			<section class="container-content">
 				<header class="header-flex-column">
@@ -59,56 +109,6 @@
 		</main>
 
 		<main id="mainPage" class="flex-column-all-h d-none">
-			<div class="tpl-snow">
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-			</div>
 			<section class="container-content">
 				<header class="header-flex-column">
 					<h1 id="welcomeMessage" class="welcome-title">Bienvenido {{ Usuario }}</h1>
@@ -134,47 +134,54 @@
 		</main>
 
 		<main id="viewPage" class="flex-column d-none">
-			<header class="nav-tab" id="navbarContainer">
-				<!-- <a href="#view=0" class="nav-item">
-					<i class="bi bi-arrow-left-circle"></i>
-				</a> -->
-
-				<a href="#home" class="nav-item-home">
-					<i class="bi bi-house"></i>
-				</a>
-
-				<!-- <a href="#view=0" class="nav-item link-disabled">
-					<i class="bi bi-arrow-right-circle"></i>
-				</a> -->
-			</header>
-
-			<section class="flex-rows p-2">
-				<article class="photo-container">
-					<img id="photoGift" src="https://img.hollisterco.com/is/image/anf/KIC_322-4176-00210-200_model1.jpg" alt="Sudadera" />
+			<section id="loaderContainer" class="flex-column-all-h d-none">
+				<article class="container-content">
+					<div class="loader"></div>
 				</article>
-				<article>
-					<p id="priceGift">$200</p>
-					<h2 id="nameGift">Sudadera</h2>
-					<p id="descriptionGift">Descripción de la sudadera</p>
-					<a href="#" target="_blank" id="linkGift">Comprar</a>
+			</section>
+			<section id="contentContainer" class="d-none">
+				<header class="nav-tab" id="navbarContainer">
+					<!-- <a href="#view=0" class="nav-item">
+						<i class="bi bi-arrow-left-circle"></i>
+					</a> -->
 
-					<section id="otherPlace">
-						<h3>¿Dónde más puedo encontrarlo?</h3>
-						<p>No te preocupes, aquí te doy una lista</p>
-						<ul>
-							<li>Plaza Satélite</li>
-							<li>Perisur</li>
-							<li>Antara</li>
-						</ul>
-					</section>
+					<a href="#home" class="nav-item-home">
+						<i class="bi bi-house"></i>
+					</a>
 
-					<p class="notice-label"><strong>Nota:</strong> Los precios que te muestro son los precios que tenían cuando los seleccioné, pueden variar.</p>
-				</article>
+					<!-- <a href="#view=0" class="nav-item link-disabled">
+						<i class="bi bi-arrow-right-circle"></i>
+					</a> -->
+				</header>
+
+				<section class="flex-rows p-2">
+					<article class="photo-container">
+						<img id="photoGift" src="https://img.hollisterco.com/is/image/anf/KIC_322-4176-00210-200_model1.jpg" alt="Sudadera" />
+					</article>
+					<article>
+						<p id="priceGift">$200</p>
+						<h2 id="nameGift">Sudadera</h2>
+						<p id="descriptionGift">Descripción de la sudadera</p>
+						<a href="#" target="_blank" id="linkGift">Comprar</a>
+
+						<section id="otherPlace">
+							<h3>¿Dónde más puedo encontrarlo?</h3>
+							<p>No te preocupes, aquí te doy una lista</p>
+							<ul>
+								<li>Plaza Satélite</li>
+								<li>Perisur</li>
+								<li>Antara</li>
+							</ul>
+						</section>
+
+						<p class="notice-label"><strong>Nota:</strong> Los precios que te muestro son los precios que tenían cuando los seleccioné, pueden variar.</p>
+					</article>
+				</section>
 			</section>
 		</main>
 
 		<footer>
-			<audio controls>
+			<audio controls autoplay>
 				<source src="./utils/santa_claus_coming.mp3" type="audio/mpeg" />
 				Your browser does not support the audio element.
 			</audio>
