Update gifts: Se agregan nuevos regalos

--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@
 						<p id="priceGift">$200</p>
 						<h2 id="nameGift">Sudadera</h2>
 						<p id="descriptionGift">Descripción de la sudadera</p>
-						<a href="#" target="_blank" id="linkGift">Comprar</a>
+						<a href="#" target="_blank" id="linkGift">
+							<img src="./img/santa.png" alt="Santa" />
+							<span>Comprar justo ahora</span>
+						</a>
 
 						<section id="otherPlace">
 							<h3>¿Dónde más puedo encontrarlo?</h3>
